part3/ex-3.08/manifests/todoapp/frontend-configuration.yaml
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: todoapp-frontend-svc
  namespace: todo-project
spec:
  type: NodePort
  selector:
    app: todoapp-frontend
  ports:
    - name: frontend
      port: 80
      protocol: TCP
      targetPort: 3000
---
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-frontend-dep
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-frontend
  template:
    metadata:
      labels:
        app: todoapp-frontend
    spec:
      containers:
        - name: todoapp-frontend
          image: FRONTEND_IMAGE
          resources:
            limits:
              memory: "700Mi"
              cpu: "400m"
