part3/ex-3.08/manifests/todoapp/backend-configuration.yaml
# SERVICE
apiVersion: v1
kind: Service
metadata:
  name: todoapp-backend-svc
  namespace: todo-project
spec:
  type: ClusterIP
  selector:
    app: todoapp-backend
  ports:
    - name: server
      protocol: TCP
      port: 80
      targetPort: 3001
---
# DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp-backend-dep
  namespace: todo-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp-backend
  template:
    metadata:
      labels:
        app: todoapp-backend
    spec:
      containers:
        - name: todoapp-backend
          image: BACKEND_IMAGE
          resources:
            limits:
              memory: "150Mi"
              cpu: "250m"
---
# INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: todo-project
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todoapp-frontend-svc
                port:
                  number: 80
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todoapp-backend-svc
                port:
                  number: 80
          - path: /files/image.jpg
            pathType: Prefix
            backend:
              service:
                name: todoapp-backend-svc
                port:
                  number: 80
